--- a/config.toml
+++ b/config.toml
@@ -21,7 +21,7 @@ theme_color = "#41228e"
 enable = true
 form_action = "#"
 [[params.plugins.css]]
-URL = "/custom.css"
+URL = "content/custom.css"
 [[params.plugins.css]]
 URL = "plugins/bootstrap/bootstrap.min.css"
 [[params.plugins.css]]
